[package]
name = "rdbc-mysql"
description = " MySQL RDBC Driver"
version = "0.1.5"
authors = ["Andy Grove <andygrove73@gmail.com>"]
license = "Apache-2.0"

edition = "2018"

[dependencies]
rdbc = { path = "../rdbc", version = "0.1.5" }

mysql = "17.0.0"
mysql_common = "0.19.2"
twox-hash = "1.5.0"
sqlparser = "0.5.0"