[package]
name = "rdbc-postgres"
description = " Postgres RDBC Driver"
version = "0.1.6"
authors = ["Andy Grove <andygrove73@gmail.com>"]
license = "Apache-2.0"

edition = "2018"

[dependencies]
rdbc = { path = "../rdbc", version = "0.1.6" }
async-trait = "0.1.22"
tokio-test = "0.2.0"
postgres = "0.15.2"
sqlparser = "0.5.0"